CXX version cmake feature set to PRIVATE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@
 
 project(realistic-mouse-movement CXX)
 
-add_library(realistic-mouse-movement STATIC src/RealisticMouse.cpp
-                                            src/RealisticMouse.h
+add_library(realistic-mouse-movement STATIC src/RealisticMouse.h
+                                            src/RealisticMouse.cpp
 )
 
 target_include_directories  (realistic-mouse-movement PUBLIC src)
-target_compile_features     (realistic-mouse-movement PUBLIC cxx_std_20)
+target_compile_features     (realistic-mouse-movement PRIVATE cxx_std_20)
